--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^11.0.2",
     "typescript": "^4.9.5",
